--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -314,6 +314,7 @@
     <ClInclude Include="..\..\..\sonia\bang\errors\value_mismatch_error.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\basic_fn_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\external_fn_pattern.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\functional\general\assert_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\general\deref_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\general\equal_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\general\mut_pattern.hpp" />
@@ -829,6 +830,7 @@
     <ClCompile Include="..\..\..\sonia\bang\errors\value_mismatch_error.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\basic_fn_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\external_fn_pattern.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\functional\general\assert_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\general\deref_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\general\equal_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\general\mut_pattern.cpp" />
