--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -265,7 +265,6 @@
     <ClInclude Include="..\..\..\sonia\bang\entities\enum\enum_implicit_cast_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\functions\create_identifier_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\functions\expression_resolver.hpp" />
-    <ClInclude Include="..\..\..\sonia\bang\entities\functions\extern\to_string_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\functions\internal_function_entity.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\literals\literal_entity.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\literals\numeric_implicit_cast_pattern.hpp" />
@@ -293,8 +292,10 @@
     <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_empty_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_get_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_head_pattern.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_implicit_cast_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_make_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_pattern.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_pattern_base.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_set_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_size_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_tail_pattern.hpp" />
@@ -318,6 +319,8 @@
     <ClInclude Include="..\..\..\sonia\bang\functional\general\deref_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\general\equal_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\general\mut_pattern.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\functional\general\to_string_pattern.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\functional\general\typeof_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\generic_pattern_base.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\generic_pattern_base.ipp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\match_utility.ipp" />
@@ -784,7 +787,6 @@
     </ClCompile>
     <ClCompile Include="..\..\..\sonia\bang\entities\functions\create_identifier_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\functions\expression_resolver.cpp" />
-    <ClCompile Include="..\..\..\sonia\bang\entities\functions\extern\to_string_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\functions\function_entity.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\functions\internal_function_entity.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\functions\parameter_type_expression_visitor.cpp">
@@ -808,11 +810,13 @@
     <ClCompile Include="..\..\..\sonia\bang\entities\struct\struct_fn_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\struct\struct_get_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\struct\struct_init_pattern.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_implicit_cast_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_make_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_empty_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_get_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_head_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_pattern.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_pattern_base.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_set_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_size_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_tail_pattern.cpp" />
@@ -834,6 +838,8 @@
     <ClCompile Include="..\..\..\sonia\bang\functional\general\deref_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\general\equal_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\general\mut_pattern.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\functional\general\to_string_pattern.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\functional\general\typeof_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\signature_matcher.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\value_match_visitor.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\value_type_match_visitor.cpp" />
