--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -269,6 +269,7 @@
     <ClInclude Include="..\..\..\sonia\bang\entities\literals\const_literal_implicit_cast_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\literals\literal_entity.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\literals\numeric_implicit_cast_pattern.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\entities\literals\string_concat_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\metaobject\metaobject_bit_and_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\metaobject\metaobject_empty_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\metaobject\metaobject_head_pattern.hpp" />
@@ -298,6 +299,8 @@
     <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_make_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_pattern_base.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_project_get_pattern.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_project_size_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_set_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_size_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_tail_pattern.hpp" />
@@ -320,6 +323,8 @@
     <ClInclude Include="..\..\..\sonia\bang\functional\general\assert_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\general\deref_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\general\equal_pattern.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\functional\general\error_pattern.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\functional\general\is_const_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\general\mut_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\general\negate_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\general\to_string_pattern.hpp" />
@@ -327,6 +332,7 @@
     <ClInclude Include="..\..\..\sonia\bang\functional\generic_pattern_base.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\generic_pattern_base.ipp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\match_utility.ipp" />
+    <ClInclude Include="..\..\..\sonia\bang\functional\expression_property_visitor.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\signature_matcher.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\value_match_visitor.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\functional\value_type_match_visitor.hpp" />
@@ -800,6 +806,7 @@
     </ClCompile>
     <ClCompile Include="..\..\..\sonia\bang\entities\literals\const_literal_implicit_cast_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\literals\numeric_implicit_cast_pattern.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\entities\literals\string_concat_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\metaobject\metaobject_argument_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\metaobject\metaobject_bit_and_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\metaobject\metaobject_empty_pattern.cpp" />
@@ -822,6 +829,8 @@
     <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_head_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_pattern_base.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_project_get_pattern.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_project_size_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_set_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_size_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_tail_pattern.cpp" />
@@ -842,10 +851,13 @@
     <ClCompile Include="..\..\..\sonia\bang\functional\general\assert_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\general\deref_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\general\equal_pattern.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\functional\general\error_pattern.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\functional\general\is_const_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\general\mut_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\general\negate_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\general\to_string_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\general\typeof_pattern.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\functional\expression_property_visitor.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\signature_matcher.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\value_match_visitor.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\functional\value_type_match_visitor.cpp" />
@@ -1116,7 +1128,6 @@
     <None Include="..\..\..\sonia\bang\bang.output" />
     <None Include="..\..\..\sonia\bang\bang.y" />
     <None Include="..\..\..\sonia\bang\generate_parser.cmd" />
-    <None Include="..\..\..\sonia\bang\vm\vmasm_builder.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
